--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Holiday</title>
   </head>
   <body>
-    <h1>Ready to find your next big dream holiday?</h1>
-    <button>Get Started</button>
+    <container class="background-image"
+      ><div class="topnav">
+        <a class="active" href="#home">Holiday Finder</a>
+        <a href="#">Find Your Holiday</a>
+        <a href="#">Popular locations</a>
+        <a href="#">Log in</a>
+        <a href="#" class="navbar-button">Create An Account →</a>
+      </div>
+      <h1>Ready to find your next big dream holiday?</h1>
+      <button>Get Started</button></container
+    >
   </body>
 </html>
