--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=>, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Holiday</title>
   </head>
   <body>
-    <container class="background-image"
-      ><div class="topnav">
+    <container class="top-section">
+      <div class="topnav">
         <a class="active" href="#home">Holiday Finder</a>
         <a href="#">Find Your Holiday</a>
         <a href="#">Popular locations</a>
