background image/fonts

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
     <title>Holiday</title>
   </head>
   <body>
-    <container class="top-section">
+    <div class="top-section">
       <div class="topnav">
         <a class="active" href="#home">Holiday Finder</a>
         <a href="#">Find Your Holiday</a>
@@ -23,7 +23,14 @@
         <a href="#" class="navbar-button">Create An Account →</a>
       </div>
       <h1>Ready to find your next big dream holiday?</h1>
-      <button>Get Started</button></container
-    >
+      <button>Get Started</button>
+    </div>
+    <div class="booking">
+      <ul class="booking-options">
+        <li>location</li>
+        <li>Nights</li>
+        <li>People</li>
+      </ul>
+    </div>
   </body>
 </html>
