--- a/index.html
+++ b/index.html
@@ -10,18 +10,28 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/04d6244288.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles.css" />
     <title>Holiday</title>
   </head>
   <body>
     <div class="top-section">
-      <div class="topnav">
-        <a class="active" href="#home">Holiday Finder</a>
-        <a href="#">Find Your Holiday</a>
-        <a href="#">Popular locations</a>
-        <a href="#">Log in</a>
-        <a href="#" class="navbar-button">Create An Account →</a>
-      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#" class="navbar-link">Holiday Finder</a></li>
+          <li><a href="#" class="navbar-link">Find Your Holiday</a></li>
+          <li><a href="#" class="navbar-link">Popular Locations</a></li>
+          <li><a href="#" class="navbar-link">Log In</a></li>
+          <li>
+            <a href="#" class="narbar-button"
+              >Create An Account<i class="fa-solid fa-arrow-right"></i
+            ></a>
+          </li>
+        </ul>
+      </nav>
       <h1>Ready to find your next big dream holiday?</h1>
       <button>Get Started</button>
     </div>
