--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
     <div class="top-section">
       <nav>
         <ul class="nav-links">
-          <li><a href="#" class="navbar-link">Holiday Finder</a></li>
+          <li>
+            <a href="#" class="navbar-link" id="main-navbar">Holiday Finder</a>
+          </li>
           <li><a href="#" class="navbar-link">Find Your Holiday</a></li>
           <li><a href="#" class="navbar-link">Popular Locations</a></li>
           <li><a href="#" class="navbar-link">Log In</a></li>
           <li>
-            <a href="#" class="narbar-button"
+            <a href="#" class="navbar-button"
               >Create An Account<i class="fa-solid fa-arrow-right"></i
             ></a>
           </li>
