--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
           <li><a href="#" class="navbar-link">Log In</a></li>
           <li>
             <a href="#" class="navbar-button"
-              >Create An Account<i class="fa-solid fa-arrow-right"></i
+              >Create An Account <i class="fa-solid fa-arrow-right"></i
             ></a>
           </li>
         </ul>
       </nav>
-      <h1>Ready to find your next big dream holiday?</h1>
-      <button>Get Started</button>
+      <div>
+        <h1 class="heading">Ready to find your next big dream holiday?</h1>
+      </div>
+      <div>
+        <a class="started"
+          >Get Started <i class="fa-solid fa-arrow-right"></i
+        ></a>
+      </div>
     </div>
     <div class="booking">
       <ul class="booking-options">
