--- a/index.html
+++ b/index.html
@@ -19,21 +19,29 @@
   </head>
   <body>
     <div class="top-section">
-      <nav>
-        <ul class="nav-links">
-          <li>
+      <div class="navbar-background">
+        <nav class="navbar">
+          <div class="container-fluid">
             <a href="#" class="navbar-link" id="main-navbar">Holiday Finder</a>
-          </li>
-          <li><a href="#" class="navbar-link">Find Your Holiday</a></li>
-          <li><a href="#" class="navbar-link">Popular Locations</a></li>
-          <li><a href="#" class="navbar-link">Log In</a></li>
-          <li>
-            <a href="#" class="navbar-button"
-              >Create An Account <i class="fa-solid fa-arrow-right"></i
-            ></a>
-          </li>
-        </ul>
-      </nav>
+          </div>
+          <ul class="navbar-nav">
+            <li class="navbar-link">
+              <a href="#" class="navbar-link">Find Your Holiday</a>
+            </li>
+            <li class="navbar-link">
+              <a href="#" class="navbar-link">Popular Locations</a>
+            </li>
+            <li class="navbar-link">
+              <a href="#" class="navbar-link">Log In</a>
+            </li>
+            <li class="navbar-link">
+              <a href="#" class="navbar-button"
+                >Create An Account <i class="fa-solid fa-arrow-right"></i
+              ></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
       <div>
         <h1 class="heading">Ready to find your next big dream holiday?</h1>
       </div>
