--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Holiday</title>
   </head>
   <body>
-    <div class="container">
+    <div class="main-section">
       <nav class="navbar">
         <div class="container-fluid">
           <a href="#" class="navbar-link" id="main-navbar">Holiday Finder</a>
@@ -48,13 +48,6 @@
           >Get Started <i class="fa-solid fa-arrow-right"></i
         ></a>
       </div>
-    </div>
-    <div class="booking" display="flex">
-      <div class="form"><input type="text" class="form-style" />Location</div>
-      <div class="form">
-        <input type="text" class="form-style" />Nights Away
-      </div>
-      <div class="form"><input type="text" class="form-style" />People</div>
     </div>
   </body>
 </html>
