--- a/index.html
+++ b/index.html
@@ -49,5 +49,24 @@
         ></a>
       </div>
     </div>
+    <div class="bottom">
+      <form>
+        <div class="labels">
+          <span>location</span>
+          <span>Nights</span>
+          <span>People</span>
+        </div>
+        <div class="inputs">
+          <input
+            class="input"
+            id="text-input"
+            type="text"
+            placeholder="San Marino"
+          />
+          <input class="input" id="text-input" type="text" placeholder="7" />
+          <input class="input" id="text-input" type="text" placeholder="2" />
+        </div>
+      </form>
+    </div>
   </body>
 </html>
