--- a/index.html
+++ b/index.html
@@ -21,24 +21,28 @@
     <div class="main-section">
       <nav class="navbar">
         <div class="container-fluid">
-          <a href="#" class="navbar-link" id="main-navbar">Holiday Finder</a>
+          <ul class="navbar-nav">
+            <li class="navbar-link">
+              <a href="#" class="navbar-link" id="main-navbar"
+                >Holiday Finder</a
+              >
+            </li>
+            <li class="navbar-link">
+              <a href="#" class="navbar-link">Find Your Holiday</a>
+            </li>
+            <li class="navbar-link">
+              <a href="#" class="navbar-link">Popular Locations</a>
+            </li>
+            <li class="navbar-link">
+              <a href="#" class="navbar-link">Log In</a>
+            </li>
+            <li class="navbar-link">
+              <a href="#" class="navbar-button"
+                >Create An Account <i class="fa-solid fa-arrow-right"></i
+              ></a>
+            </li>
+          </ul>
         </div>
-        <ul class="navbar-nav">
-          <li class="navbar-link">
-            <a href="#" class="navbar-link">Find Your Holiday</a>
-          </li>
-          <li class="navbar-link">
-            <a href="#" class="navbar-link">Popular Locations</a>
-          </li>
-          <li class="navbar-link">
-            <a href="#" class="navbar-link">Log In</a>
-          </li>
-          <li class="navbar-link">
-            <a href="#" class="navbar-button"
-              >Create An Account <i class="fa-solid fa-arrow-right"></i
-            ></a>
-          </li>
-        </ul>
       </nav>
       <div>
         <h1 class="heading">Ready to find your next big dream holiday?</h1>
@@ -49,24 +53,34 @@
         ></a>
       </div>
     </div>
-    <div class="bottom">
-      <form>
-        <div class="labels">
-          <span>location</span>
-          <span>Nights</span>
-          <span>People</span>
-        </div>
-        <div class="inputs">
-          <input
-            class="input"
-            id="text-input"
-            type="text"
-            placeholder="San Marino"
-          />
-          <input class="input" id="text-input" type="text" placeholder="7" />
-          <input class="input" id="text-input" type="text" placeholder="2" />
-        </div>
-      </form>
+    <div class="wrapper">
+      <div></div>
+      <div class="left">
+        <label for="destination" class="destination-label">Destination</label>
+      </div>
+      <div class="center">
+        <label for="nights" class="nights-label">Nights</label>
+      </div>
+      <div class="right">
+        <label for="people" class="people-label">People</label>
+      </div>
+      <div></div>
+      <div></div>
+      <div class="left">
+        <input
+          type="text"
+          id="destination"
+          name="destination"
+          placeholder="San Marino"
+        />
+      </div>
+      <div class="center">
+        <input type="text" id="nights" name="nights" placeholder="5" />
+      </div>
+      <div class="right">
+        <input type="text" id="people" name="people" placeholder="2" />
+      </div>
+      <div></div>
     </div>
   </body>
 </html>
