--- a/index.html
+++ b/index.html
@@ -19,31 +19,27 @@
   </head>
   <body>
     <div class="main-section">
-      <nav class="navbar">
-        <div class="container-fluid">
-          <ul class="navbar-nav">
-            <li class="navbar-link">
-              <a href="#" class="navbar-link" id="main-navbar"
-                >Holiday Finder</a
-              >
-            </li>
-            <li class="navbar-link">
+      <header>
+        <nav class="navbar">
+          <h1 class="logo">Holiday Finder</h1>
+          <ul class="navbar-link">
+            <li>
               <a href="#" class="navbar-link">Find Your Holiday</a>
             </li>
-            <li class="navbar-link">
+            <li>
               <a href="#" class="navbar-link">Popular Locations</a>
             </li>
-            <li class="navbar-link">
+            <li>
               <a href="#" class="navbar-link">Log In</a>
             </li>
-            <li class="navbar-link">
+            <li>
               <a href="#" class="navbar-button"
                 >Create An Account <i class="fa-solid fa-arrow-right"></i
               ></a>
             </li>
           </ul>
-        </div>
-      </nav>
+        </nav>
+      </header>
       <div>
         <h1 class="heading">Ready to find your next big dream holiday?</h1>
       </div>
@@ -67,6 +63,7 @@
       <div></div>
       <div></div>
       <div class="left">
+        <i class="fa-solid fa-location-arrow"></i>
         <input
           type="text"
           id="destination"
@@ -75,12 +72,18 @@
         />
       </div>
       <div class="center">
-        <input type="text" id="nights" name="nights" placeholder="5" />
+        <i class="fa-solid fa-bed"></i
+        ><input type="text" id="nights" name="nights" placeholder="5" />
       </div>
       <div class="right">
-        <input type="text" id="people" name="people" placeholder="2" />
+        <i class="fa-solid fa-user"></i
+        ><input type="text" id="people" name="people" placeholder="2" />
       </div>
-      <div></div>
+      <div>
+        <a href="#" class="circle-button"
+          ><i class="fa-solid fa-magnifying-glass"></i
+        ></a>
+      </div>
     </div>
   </body>
 </html>
