--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a href="#" class="navbar-link">Log In</a>
             </li>
             <li>
-              <a href="#" class="navbar-button"
+              <a href="#" class="navbar-link" id="navbar-button"
                 >Create An Account <i class="fa-solid fa-arrow-right"></i
               ></a>
             </li>
@@ -41,7 +41,7 @@
         </nav>
       </header>
       <div>
-        <h1 class="heading">Ready to find your next big dream holiday?</h1>
+        <h1 id="title">Ready to find your next big dream holiday?</h1>
       </div>
       <div>
         <a class="started"
